download videos from Yle servers
Copyright 2009-2017 Antti Ajanki
Distributed under the GPL v3

xx xxx 2017, Version 2.24

- Option --showmetadata for printing stream metadata (available bitrates, etc.)
- Download only the main content in Elävä arkisto
- Fixed some Elävä arkisto audio streams and titles

20 Aug 2017, Version 2.23

- Use HTTPS on Areena

7 Aug 2017, Version 2.22

- Display a progress bar when downloading HTML5 videos
- Get all episodes on an Areena series page, not just dozen latest
- Partially fixed the --showepisodepage output on Elävä Arkisto
- Reduce network traffic by downloading metadata in compressed format

31 Jul 2017, Version 2.21

- Requires Python 2.7
- Get non-adaptive MP4 when available. ffmpeg is need only rarely (never?)
- Fixed the recording of live radio streams
- New option --duration for limitting the max duration to download
- Some invalid argument combinations that were previously silently ignored
  now result in error
- Unrecognized arguments are no longer passed to rtmpdump (use --rtmpdump
  with a script instead)
- Some rtmpdump argument aliases are no longer supported, for example -e or -z
- --showepisodepage was broken and slow
- Pipe HLS stream on a TS container. Better lip sync and compatibility

19 Jul 2017, Version 2.20

- Use setuptools for building and installing
- The installation command has changed, see README.md

4 Jul 2017, Version 2.19

- Fixed a bug introduced in the previous version that caused some videos to fail
- Print the URL being processed when downloading several URLs

2 Jul 2017, Version 2.18

- Some HTML5 streams were not being downloaded correctly
- Append an extension to the output file name if not given on the command line

18 Jun 2017, Version 2.17

- Support for the HLS streams on Areena
- New dependency: ffmpeg

30 May 2017, Version 2.16

- Improved support for Elävä arkisto and Svenska Arkivet
- Option --ratelimit for limiting bandwidth consumption during download

7 Mar 2017, Version 2.15
